--- a/package.json
+++ b/package.json
@@ -92,9 +92,11 @@
     "@types/benchmark": "^1.0.31",
     "@types/compression": "0.0.36",
     "@types/express": "^4.17.0",
+    "@types/gl": "^4.1.0",
     "@types/jest": "^24.0.15",
     "@types/node": "^12.0.10",
     "@types/node-fetch": "^2.3.7",
+    "@types/pngjs": "^3.3.2",
     "@types/react": "^16.8.22",
     "@types/react-dom": "^16.8.4",
     "@types/swagger-ui-dist": "3.0.0",
@@ -102,9 +104,11 @@
     "argparse": "^1.0.10",
     "compression": "^1.7.4",
     "express": "^4.17.1",
+    "gl": "^4.3.3",
     "graphql": "^14.3.1",
     "immutable": "^3.8.2",
     "node-fetch": "^2.6.0",
+    "pngjs": "^3.4.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "rxjs": "^6.5.2",
